# Atlas

./: Atlas.db  CMakeLists.txt  Dialog  Dialog.c  Makefile  backend_init.c  main  main.c  manualbuild.sh
